# tour-dashboard

./: .gitignore  LICENSE  README.md  database.py  gpx_data_processing.py  pyproject.toml  tour_dashboard.py
data/: 2021-04-11_346102736_Rennradtour 11.04.2021 14 38.gpx  Rennradtour_03_04_2021_12_06.gpx  data.db  gpx_example.gpx
resources/: Rennradtour_04_04_2021_15_43.gpx  db_credentials_schema.json
tests/: data_processing_tests.py  database_test.py  utils_test.py
tests/test_resources/: db_credentials_test.json  gpx_read_data.gpx  gpx_test.gpx
tour_dashboard/: data_processing.py  database.py  main.py  scratch.py  statistics.py  utils.py  visualization.py
