[tool.poetry]
name = "tour-dashboard"
version = "0.1.0"
description = "Load, process and visualize gpx data from exercise tours."
authors = ["Mehrshad Pakdel <mehrshad.pakdel@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "3.8"
pandas = "^1.2.4"
numpy = "^1.20.2"
SQLAlchemy = "^1.4.12"
hashlib = "^20081119"
gpxpy = "^1.4.2"
geopy = "^2.1.0"
pytest = "^6.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
