[tool.poetry]
name = "tour-dashboard"
version = "0.1.0"
description = "Load, process and visualize gpx data from exercises."
authors = ["Mehrshad Pakdel <mehrshad.pakdel@posteo.de>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.3"
pandas-stubs = "^1.4.3.220710"
numpy = "^1.23.0"
SQLAlchemy = "^1.4.12"
hashlib = "*"
gpxpy = "^1.4.2"
geopy = "^2.1.0"
pytest = "^6.2.3"
pyOpenSSL = "^22.0.0"
Mypy = "^0.960"
pylint = "^2.14.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
